--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
     "mysql2": "^2.3.3",
     "sequelize": "^6.14.1",
     "sequelize-auto": "^0.8.8"
+  },
+  "devDependencies": {
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1"
   }
 }
