--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["airbnb-base", "prettier"],
+  "extends": ["airbnb-base", "prettier", "plugin:node/recommended"],
   "plugins": ["prettier"],
   "parserOptions": {
     "ecmaVersion": "latest",
@@ -13,7 +13,6 @@
     "prettier/prettier": "error",
     "no-unused-vars": "warn",
     "no-console": "off",
-    "semi": ["warn", "always"],
     "quotes": ["error", "single"]
   }
 }
