--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "choflix api for mobile app",
   "main": "app.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "lint": "eslint --fix main.js",
+    "format": "prettier -w ."
   },
   "repository": {
     "type": "git",
@@ -22,11 +24,17 @@
     "sequelize-auto": "^0.8.8"
   },
   "devDependencies": {
-    "eslint": "^8.7.0",
+    "eslint": "8.2.0",
+    "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.3.0",
     "prettier": "^2.5.1"
   }
 }
