--- a/package.json
+++ b/package.json
@@ -19,9 +19,17 @@
   },
   "homepage": "https://github.com/moustaphadiakhate/chroflix-backend#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
+    "dotenv": "^15.0.0",
+    "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.14.1",
-    "sequelize-auto": "^0.8.8"
+    "sequelize-auto": "^0.8.8",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "eslint": "8.2.0",
