--- a/config/config.json
+++ b/config/config.json
@@ -2,9 +2,12 @@
   "development": {
     "username": "root",
     "password": "pass",
-    "database": "c1353623c_chroflix_2_development",
+    "database": "c1353623c_chroflix",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "define": {
+      "underscored": true
+    }
   },
   "test": {
     "username": "root",
