--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "sequelize": "^6.14.1",
     "sequelize-auto": "^0.8.8",
