--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "dev": "npx nodemon  app.js",
     "test": "test",
     "lint": "eslint --fix main.js",
     "format": "prettier -w ."
@@ -29,6 +30,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.19",
     "sequelize": "^6.14.1",
     "sequelize-auto": "^0.8.8",
     "shortid": "^2.2.16"
